# LibrarySelectionTool

./: CMakeLists.txt  DuplicateDetectionFrame.cpp  DuplicateDetectionFrame.h  FileSelectionFrame.cpp  FileSelectionFrame.h  ListFileHelper.cpp  ListFileHelper.h  MyFrame.cpp  MyFrame.h  MyListSwapWidget.cpp  MyListSwapWidget.h  README.md  ToolSelectionDialog.cpp  ToolSelectionDialog.h  file_info.cpp  file_info.h  main.cpp
